syntax = "proto3";

import "google/protobuf/empty.proto";
option csharp_namespace = "tobeh.TypoContentService";

package content;

service Content {
  
}

message FileChunkMessage {
  bytes chunk = 1;
  int32 chunkIndex = 2;
  string name = 3;
  string fileType = 4;  
}


